# Contabilidad-IConstruye

./: CHANGELOG_TOKEN_FIX.md  CLAUDE.md  INSTRUCCIONES_RAPIDAS.md  PLAN_IMPLEMENTACION_NUEVO_FLUJO.md  README_EXTRACCION_PDF.md  RESUMEN_IMPLEMENTACION.md  config copy.yaml  config.yaml  instalar_dependencias.sh  main.py  pyproject.toml  requirements.txt  test_pdf_extractor.py
.zed/: launch.json
data/: _configuracion_correos_bueno.xlsx  _destinatarios2.xlsx  _destinatarios_ejemplo.xlsx  configuracion_correo.xlsx  destinatarios.xlsx
informes/: informe_resumen_NOMINA_2025-12-03_21-08-03.xlsx  informe_resumen_NOMINA_2025-12-03_21-19-55.xlsx  informe_resumen_NOMINA_2025-12-03_21-54-35.xlsx  informe_resumen_NOMINA_2025-12-04_07-26-21.xlsx
src/configuration/: _credentials.json  _token.json
src/google_drive/: __init__.py  drive_oauth.py  drive_upload.py  main.py
src/models/: registro.py
src/services/: downloader.py  drive_source.py  excel_generator.py  excel_updater.py  lectura.py  pdf_extractor.py  reader.py  scraper.py
src/templates/: plantilla.html
src/utils/: email_mapping.py  email_sender.py  grouping.py
